<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">FitFinder</string>
    <string name="action_settings">Settings</string>
    <string name="app_id" translatable="false">699017093577131</string>
    <string name="title_activity_main" translatable="false">MainActivity</string>
    <string name="title_activity_on_board" translatable="false">OnBoardActivity</string>
    <string name="toast_error_request">Error Processing Request</string>
    <string name="toast_empty_fields">Please fill out all fields</string>
    <string name="toast_account_created">Account Created!</string>
    <string name="title_activity_edit_profile" translatable="false">EditProfileActivity</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="search_for_cnx">Search for Connections</string>
    <string name="button_chats">Chats/Connections</string>
    <string name="action_bar_my_profile">My Profile</string>
    <string name="field_enter_location">Enter Location</string>
    <string name="title_where_looking">What area would you like to search?</string>
    <string name="button_update_profile">Update Profile</string>
    <string name="hint_about_me">Max. 300 Characters</string>
    <string name="toast_valid_location">Please Select a Valid Location</string>
    <string name="toast_profile_updated">Profile Updated!</string>
    <string name="title_activity_search" translatable="false">SearchActivity</string>
    <string name="title_roommate_search">Search</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="title_activity_chat" translatable="false">ChatActivity</string>
    <string name="title_activity_messaging" translatable="false">MessagingActivity</string>
    <string name="toast_message_send_failed">Message failed to send.</string>

    <string name="title_chats">Chats</string>
    <string name="message_new_connection">You have a new connection!</string>
    <string name="action_logout">Logout</string>
    <string name="button_sign_in_facebook">Log in using Facebook</string>
    <string name="button_accept">ACCEPT</string>
    <string name="button_reject">REJECT</string>
    <string name="fitfinder_text_looking_for">Looking for:\u0020</string>
    <string name="no_connection">No Internet Connection</string>
    <string name="question_gender_pref">What are your gender Preferences?</string>
    <string name="choice_male">Male</string>
    <string name="choice_female">Female</string>
    <string name="choice_both">Both</string>
    <string name="question_looking_for">What option are you looking for?</string>
    <string name="choice_yes">Yes</string>
    <string name="choice_no">No</string>
    <string name="question_about_me">About Me</string>
    <string name="desc_save_profile">Save Profile Button</string>
    <string name="button_create_profile">CREATE PROFILE</string>
    <string name="title_activity_launcher" translatable="false">LauncherActivity</string>
    <string name="deafult_user_string">User</string>
    <string name="desc_search_image">Search Image</string>
    <string name="desc_chat_image">Chat Image</string>
    <string name="button_cancel">CANCEL</string>
    <string name="roomie_looking_in">Looking In:\u0020</string>
    <string name="empty_roomie_string">There are currently no matches in your area.\nPlease click here to refresh.</string>
    <string name="empty_chat_list">You don\'t have any connections!\nUse the search feature to connect!</string>
    <string name="dialog_title_logout">Log Out</string>
    <string name="dialog_content_logout">Log out now?</string>
    <string name="dialog_positive_logout">Log Out</string>
    <string name="dialog_negative">Cancel</string>
    <string name="question_smoke">Do you smoke?</string>
    <string name="roomie_text_smokes">Smokes:\u0020</string>
    <string name="desc_profile_image">Profile Image</string>
    <string name="question_drink">Do you drink?</string>
    <string name="question_pet" translatable="false">Do you have a pet?</string>
    <string name="roomie_text_drinks">Drinks:\u0020</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="action_delete_connection">Delete Connection</string>
    <string name="dialog_title_delete_connection">Delete Connection</string>
    <string name="dialog_content_delete_connection">Delete this connection?</string>
    <string name="dialog_positive_delete_connection">Delete</string>
    <string name="title_activity_settings">Settings</string>
    <string name="preference_discovery">Discovery Preference</string>
    <string name="preference_notification">Notification Preferences</string>
    <string name="choice_discovery">Discoverable</string>
    <string name="choice_general_updates">General Updates</string>
    <string name="choice_new_connections">New Connections</string>
    <string name="choice_new_messages">Messages</string>
    <string name="choice_privacy_policy">Privacy Policy</string>
    <string name="choice_terms">Terms of Service</string>
    <string name="action_delete_account">Delete Account</string>
    <string name="changeFontText">Change Font</string>
    <string name="action_save">Save</string>
    <string name="undiscoverable_text">You have Discovery set to off!\n Turn Discovery on in the Settings page to find new connections!</string>
    <string name="search_for_trainer">I am looking for a trainer</string>
    <string name="offer_training">I am offering personal training</string>
    <string name="search_for_partner">Looking for a workout partner</string>
    <string name="title_activity_add_user" translatable="false">AddUserActivity</string>

    <string name="hello_world" translatable="false">Hello world!</string>
    <string name="email_address">Enter email address</string>
    <string name="button_create_user">CREATE USER</string>
    <string name="enter_password">Enter desired password</string>
    <string name="enter_email">Enter email to use as login</string>
    <string name="button_sign_in_email">Log in using E-mail</string>
    <string name="button_sign_up_email">Sign up using E-mail</string>
    <string name="question_nameText">Name to show on profile</string>
    <string name="usernameHint">Enter desired profile name</string>
    <string name="enter_login_email">Enter login email</string>
    <string name="enter_login_password">Enter login password</string>
    <string name="button_login">LOGIN</string>
    <string name="message_hint">Say anything</string>
    <string name="question_sex">What is your gender?</string>
    <string name="sex_male">Male</string>
    <string name="sex_female">Female</string>
    <string name="addUser">Add User</string>
    <string name="login">Login</string>
    <string name="editProfile">Edit Profile</string>
    <string name="settings">Settings</string>
    <string name="chats">Chats</string>
    <string name="profileInfo">Profile Info</string>
    <string name="saveProfile">SAVE PROFILE</string>
    <string name="forgotPassword">Forgot password?</string>
    <string name="searchResults">Search Results</string>
    <string name="sendMessage">Send message</string>
    <string name="you">You</string>
    <string name="aboutMeText">About\u0020</string>
    <string name="prefTitle">Preferences</string>
    <string name="fonts">Fonts</string>


    <string name="action_show_profile">Show Profile</string>
    <string name="title_activity_search_map" translatable="false">Map</string>
    <string name="prefSearchDistance">Change Search Distance</string>
    <string name="prefHowFarSearch">Select how far you want to search</string>
    <string name="prefFontSelect">Select Font</string>

    <string-array name="distances">
        <item>10 miles (1.6 km)</item>
        <item>25 miles (40.2 km)</item>
        <item>100 miles (161 km)</item>
        <item>500 miles (805 km)</item>
        <item>Search the whole world!</item>
    </string-array>

</resources>
