<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:key="first_category"
        android:title="@string/prefTitle">

        <ListPreference
            android:title="@string/fonts"
            android:summary="@string/prefFontSelect"
            android:key="@string/pref_font"
            android:defaultValue="5"
            android:entries="@array/fonts"
            android:entryValues="@array/listValues"/>

        <ListPreference
            android:title="Search distance"
            android:summary="@string/prefHowFarSearch"
            android:key="pref_searchRadius"
            android:defaultValue="3"
            android:entries="@array/distances"
            android:entryValues="@array/distanceValues"/>
    </PreferenceCategory>


</PreferenceScreen>