<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.fitfinder.fitfinder.activities.LoginActivity"
    android:background="@drawable/runner4">

    <TextView
        android:id="@+id/appTitleTextView"
        android:text="@string/app_name"
        style="@style/Text.titleStyle"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <Button
        android:id="@+id/loginButton"
        android:text="@string/button_sign_in_facebook"
        style="@style/Buttons.emailButton"
        android:layout_above="@+id/emailLoginButton"/>

    <Button
        android:id="@+id/emailLoginButton"
        android:text="@string/button_sign_in_email"
        style="@style/Buttons.emailButton"
        android:layout_above="@+id/emailSignUpButton"/>
    <Button
        android:id="@+id/emailSignUpButton"
        android:text="@string/button_sign_up_email"
        style="@style/Buttons.emailButton"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />
</RelativeLayout>
