<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="vertical"
    tools:context="com.fitfinder.fitfinder.activities.MainActivity">

<include
android:id="@+id/app_bar"
        layout="@layout/app_bar" />

    <RelativeLayout
        android:id="@+id/profileSplace"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:background="@drawable/profile_button"
            android:layout_weight="0.35">
        <Space android:id="@+id/dummy"

            style="@style/SpaceStyle"/>

        <FrameLayout
            android:id="@+id/profImageFrame"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_marginLeft="26dp"
            android:layout_marginStart="26dp">

        <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profImage"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center_vertical"
                app:civ_border_width="3dp"
                app:civ_border_color="@color/primary"
                android:src="@drawable/ic_def_pic" />

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:id="@+id/imageProgressBar"
                android:visibility="invisible"
                android:indeterminate="false" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/editProfile"
            android:layout_toRightOf="@+id/profImageFrame"
            android:layout_toEndOf="@+id/profImageFrame">

            <TextView
                android:id="@+id/nameField"
                style="@style/Text.Large"/>

            <ProgressBar
                android:id="@+id/nameProgressBar"
                style="?android:attr/progressBarStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:visibility="invisible"/>
        </FrameLayout>

        <TextView
            android:id="@+id/editProfile"
            android:text="@string/edit_profile"
            android:layout_alignTop="@+id/dummy"
            android:layout_toRightOf="@+id/profImageFrame"
            android:layout_toEndOf="@+id/profImageFrame"
            style="@style/Text.Small"
            android:layout_marginTop="32dp"
            android:paddingLeft="4dp"
            android:paddingTop="8dp"
            android:paddingRight="8dp"
            android:paddingBottom="8dp" />

        <!--<ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:progress="35"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editProfile"
            android:layout_toRightOf="@+id/profImage"
            android:layout_toEndOf="@+id/profImage" />

        <TextView
            android:id="@+id/percentField"
            android:text=""
            android:layout_below="@+id/nameField"
            android:layout_toRightOf="@+id/editProfile"
            android:layout_toEndOf="@+id/editProfile"
            style="@style/Text.Small"/>-->

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5">

        <Space android:id="@+id/dummy2"
            style="@style/SpaceStyle" />

        <RelativeLayout
            android:id="@+id/searchButton"
            android:layout_toLeftOf="@id/dummy2"
            android:layout_toStartOf="@id/dummy2"
            style="@style/Buttons.Left">

            <ImageView
                android:contentDescription="@string/desc_search_image"
                android:id="@+id/searchImage"
                android:src="@drawable/ic_friends"
                style="@style/buttomImageStyle" />

            <TextView
                android:id="@+id/searchText"
                android:text="@string/search_for_cnx"
                android:layout_below="@id/searchImage"
                style="@style/Text.buttonTextStyle"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/chatButton"
            android:layout_toRightOf="@id/dummy2"
            android:layout_toEndOf="@id/dummy2"
            style="@style/Buttons.Right"
            android:layout_alignTop="@+id/searchButton"
            android:layout_alignBottom="@+id/searchButton">

            <ImageView
                android:contentDescription="@string/desc_chat_image"
                android:id="@+id/chatImage"
                android:src="@drawable/ic_chat"
                style="@style/buttomImageStyle"/>

            <TextView
                android:id="@+id/chatText"
                android:text="@string/button_chats"
                android:layout_below="@id/chatImage"
                style="@style/Text.buttonTextStyle" />
        </RelativeLayout>
    </RelativeLayout>

    <Space
        style="@style/SpaceStyle"
        android:layout_weight="0.15"/>

</LinearLayout>
